src/zephyr_c/net/znet_ip.nim


# proc net_if_ipv4_is_addr_bcast*(iface: ptr net_if; inaddr: ptr InAddr): bool {.
    # importc: "net_if_ipv4_is_addr_bcast", header: hdr.}


## *
##  @brief Check if the given IPv4 address is a broadcast address.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr IPv4 address
##
##  @return True if address is a broadcast address, false otherwise.
##

# TODO: FIXME
# proc net_ipv4_is_addr_bcast*(iface: ptr net_if; inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}

# proc net_if_ipv4_addr_lookup*(inaddr: ptr InAddr; iface: ptr ptr net_if): ptr net_if_addr {.  importc: "net_if_ipv4_addr_lookup", header: hdr.}

## *
##  @brief Check if the IPv4 address is assigned to any network interface
##  in the system.
##
##  @param addr A valid pointer on an IPv4 address
##
##  @return True if IPv4 address is found in one of the network interfaces,
##  False otherwise.
##

proc net_ipv4_is_my_addr*(inaddr: ptr InAddr): bool {.importc: "$1", header: hdr.}


## *
##   @brief Check if the IPv6 address is unspecified (all bits zero)
##
##   @param addr IPv6 address.
##
##   @return True if the address is unspecified, false otherwise.
##

proc net_ipv6_is_addr_unspecified*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##   @brief Check if the IPv6 address is solicited node multicast address
##   FF02:0:0:0:0:1:FFXX:XXXX defined in RFC 3513
##
##   @param addr IPv6 address.
##
##   @return True if the address is solicited node address, false otherwise.
##

proc net_ipv6_is_addr_solicited_node*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 address is a given scope multicast
##  address (FFyx::).
##
##  @param addr IPv6 address
##  @param scope Scope to check
##
##  @return True if the address is in given scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_scope*(inaddr: ptr In6Addr; scope: cint): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 addresses have the same multicast scope (FFyx::).
##
##  @param addr_1 IPv6 address 1
##  @param addr_2 IPv6 address 2
##
##  @return True if both addresses have same multicast scope,
##  false otherwise.
##

proc net_ipv6_is_same_mcast_scope*(addr_1: ptr In6Addr; addr_2: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 address is a global multicast address (FFxE::/16).
##
##  @param addr IPv6 address.
##
##  @return True if the address is global multicast address, false otherwise.
##

proc net_ipv6_is_addr_mcast_global*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 address is a interface scope multicast
##  address (FFx1::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a interface scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_iface*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is a link local scope multicast
##  address (FFx2::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a link local scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_link*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is a mesh-local scope multicast
##  address (FFx3::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a mesh-local scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_mesh*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is a site scope multicast
##  address (FFx5::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a site scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_site*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is an organization scope multicast
##  address (FFx8::).
##
##  @param addr IPv6 address.
##
##  @return True if the address is an organization scope multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_org*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address belongs to certain multicast group
##
##  @param addr IPv6 address.
##  @param group Group id IPv6 address, the values must be in network
##  byte order
##
##  @return True if the IPv6 multicast address belongs to given multicast
##  group, false otherwise.
##

proc net_ipv6_is_addr_mcast_group*(inaddr: ptr In6Addr; group: ptr In6Addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Check if the IPv6 address belongs to the all nodes multicast group
##
##  @param addr IPv6 address
##
##  @return True if the IPv6 multicast address belongs to the all nodes multicast
##  group, false otherwise
##

proc net_ipv6_is_addr_mcast_all_nodes_group*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is a interface scope all nodes multicast
##  address (FF01::1).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a interface scope all nodes multicast address,
##  false otherwise.
##

proc net_ipv6_is_addr_mcast_iface_all_nodes*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Check if the IPv6 address is a link local scope all nodes multicast
##  address (FF02::1).
##
##  @param addr IPv6 address.
##
##  @return True if the address is a link local scope all nodes multicast
##  address, false otherwise.
##

proc net_ipv6_is_addr_mcast_link_all_nodes*(inaddr: ptr In6Addr): bool {.importc: "$1", header: hdr.}

## *
##   @brief Create solicited node IPv6 multicast address
##   FF02:0:0:0:0:1:FFXX:XXXX defined in RFC 3513
##
##   @param src IPv6 address.
##   @param dst IPv6 address.
##

proc net_ipv6_addr_create_solicited_node*(src: ptr In6Addr; dst: ptr In6Addr)  {.importc: "$1", header: hdr.}

## * @brief Construct an IPv6 address from eight 16-bit words.
##
##   @param addr IPv6 address
##   @param addr0 16-bit word which is part of the address
##   @param addr1 16-bit word which is part of the address
##   @param addr2 16-bit word which is part of the address
##   @param addr3 16-bit word which is part of the address
##   @param addr4 16-bit word which is part of the address
##   @param addr5 16-bit word which is part of the address
##   @param addr6 16-bit word which is part of the address
##   @param addr7 16-bit word which is part of the address
##

proc net_ipv6_addr_create*(inaddr: ptr In6Addr;
                          addr0: uint16; addr1: uint16; addr2: uint16; addr3: uint16;
                          addr4: uint16; addr5: uint16; addr6: uint16; addr7: uint16
                          ) {.importc: "$1", header: hdr.}

## *
##   @brief Create link local allnodes multicast IPv6 address
##
##   @param addr IPv6 address
##

proc net_ipv6_addr_create_ll_allnodes_mcast*(inaddr: ptr In6Addr) {.importc: "$1", header: hdr.}

## *
##   @brief Create link local allrouters multicast IPv6 address
##
##   @param addr IPv6 address
##

proc net_ipv6_addr_create_ll_allrouters_mcast*(inaddr: ptr In6Addr) {.importc: "$1", header: hdr.}

## *
##   @brief Create IPv6 address interface identifier
##
##   @param addr IPv6 address
##   @param lladdr Link local address
##

# TODO: FIXME
# proc net_ipv6_addr_create_iid*(inaddr: ptr In6Addr; lladdr: ptr net_linkaddr) {.importc: "$1", header: hdr.}

## *
##   @brief Check if given address is based on link layer address
##
##   @return True if it is, False otherwise
##

# TODO: FIXME
# proc net_ipv6_addr_based_on_ll*(inaddr: ptr In6Addr; lladdr: ptr net_linkaddr): bool {.importc: "$1", header: hdr.}

## *
##  @brief Get sockaddr_in6 from sockaddr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv6 socket address
##

proc net_sin6*(inaddr: ptr SockAddr): ptr Sockaddr_in6 {.importc: "$1", header: hdr.}

## *
##  @brief Get sockaddr_in from sockaddr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv4 socket address
##

proc net_sin*(inaddr: ptr SockAddr): ptr SockAddr_in {.importc: "$1", header: hdr.}

## *
##  @brief Get sockaddr_in6_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv6 socket address
##
# proc net_sin6_ptr*(inaddr: ptr sockaddr_ptr): ptr sockaddr_in6_ptr =
  # return cast[ptr sockaddr_in6_ptr](`addr`)

## *
##  @brief Get sockaddr_in_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv4 socket address
##
# proc net_sin_ptr*(inaddr: ptr sockaddr_ptr): ptr sockaddr_in_ptr =
  # return cast[ptr sockaddr_in_ptr](`addr`)

## *
##  @brief Get sockaddr_ll_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to linklayer socket address
##
# proc net_sll_ptr*(inaddr: ptr sockaddr_ptr): ptr sockaddr_ll_ptr =
  # return cast[ptr sockaddr_ll_ptr](`addr`)

## *
##  @brief Get sockaddr_can_ptr from sockaddr_ptr. This is a helper so that
##  the code needing this functionality can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to CAN socket address
##
# proc net_can_ptr*(inaddr: ptr sockaddr_ptr): ptr sockaddr_can_ptr =
  # return cast[ptr sockaddr_can_ptr](`addr`)

## *
##  @brief Convert a string to IP address.
##
##  @param family IP address family (AF_INET or AF_INET6)
##  @param src IP address in a null terminated string
##  @param dst Pointer to struct InAddr if family is AF_INET or
##  pointer to struct In6Addr if family is AF_INET6
##
##  @note This function doesn't do precise error checking,
##  do not use for untrusted strings.
##
##  @return 0 if ok, < 0 if error
##

proc net_addr_pton*(family: TSa_Family;
                    src: cstring;
                    dst: pointer | ptr InAddr | ptr In6Addr
                    ): cint {.
    importc: "net_addr_pton", header: hdr.}

## *
##  @brief Convert IP address to string form.
##
##  @param family IP address family (AF_INET or AF_INET6)
##  @param src Pointer to struct InAddr if family is AF_INET or
##         pointer to struct In6Addr if family is AF_INET6
##  @param dst Buffer for IP address as a null terminated string
##  @param size Number of bytes available in the buffer
##
##  @return dst pointer if ok, NULL if error
##

proc net_addr_ntop*(family: TSa_Family;
                    src: pointer | ptr InAddr | ptr In6Addr;
                    dst: cstring; size: csize_t
                    ): cstring {.
    importc: "net_addr_ntop", header: hdr.}

## *
##  @brief Parse a string that contains either IPv4 or IPv6 address
##  and optional port, and store the information in user supplied
##  sockaddr struct.
##
##  @details Syntax of the IP address string:
##    192.0.2.1:80
##    192.0.2.42
##    [2001:db8::1]:8080
##    [2001:db8::2]
##    2001:db::42
##  Note that the str_len parameter is used to restrict the amount of
##  characters that are checked. If the string does not contain port
##  number, then the port number in sockaddr is not modified.
##
##  @param str String that contains the IP address.
##  @param str_len Length of the string to be parsed.
##  @param addr Pointer to user supplied struct sockaddr.
##
##  @return True if parsing could be done, false otherwise.
##

proc net_ipaddr_parse*(str: cstring; str_len: csize_t; inaddr: ptr SockAddr): bool {.
    importc: "net_ipaddr_parse", header: hdr.}
